--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,4 +1,7 @@
-version: 1
+version: 2
+
+release:
+  draft: true
 
 before:
   hooks:
@@ -22,7 +25,6 @@ signs:
       - "${artifact}"
       - "--yes" # needed on cosign 2.0.0+
     artifacts: all
-
 
 brews:
   - name: prs
