feat: better cli flags handling, +config support
Introduces a breaking change in the schema of prs' YML config file, but
makes the overall configuration management more streamlined.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 # to test workings on linux
 services:
-  omm-dev:
+  prs-dev:
     image: golang:1.22.5-alpine
     volumes:
       - .:/go/src/app
