--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,10 +7,10 @@ on:
     paths:
       - "go.*"
       - "**/*.go"
-      - ".github/workflows/*.yml"
+      - ".github/workflows/lint.yml"
 
 env:
-  GO_VERSION: '1.23.2'
+  GO_VERSION: '1.23.5'
 
 jobs:
   lint:
@@ -24,4 +24,4 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.61
+          version: v1.63
