--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,7 @@ updates:
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
-      interval: "daily"
-      time: "16:00"
+      interval: "monthly"
     reviewers:
       - "dhth"
     labels:
@@ -15,8 +14,7 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
-      time: "16:00"
+      interval: "monthly"
     reviewers:
       - "dhth"
     labels:
