--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ permissions:
   id-token: write
 
 env:
-  GO_VERSION: '1.23.5'
+  GO_VERSION: '1.24.3'
 
 jobs:
   release:
@@ -22,16 +22,14 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: Build
-        run: go build -v ./...
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3
         with:
-          cosign-release: 'v2.4.1'
+          cosign-release: 'v2.5.0'
       - name: Release Binaries
         uses: goreleaser/goreleaser-action@v6
         with:
-          version: latest
+          version: '~> v2'
           args: release --clean
         env:
           GITHUB_TOKEN: ${{secrets.GH_PAT}}
